2010-04-16 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.1-OOO320_m15-1 :
	- new snapshot
	- build with internal redland

2010-03-26 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.1-OOO320_m14-1 :
	- new snapshot/road to 3.2.1 starts
	- use mercurial for checkout
	- switch to xz compression
	- try to workaround system redland issues

2010-02-02 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.0-OOO320_m12-1 :
	- new snapshot/3.2.0 RC5

2010-01-25 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.0-OOO320_m11-1 :
	- new snapshot/3.2.0 RC4

2010-01-18 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.0-OOO320_m10-1 :
	- new snapshot/3.2.0 RC3
	- fix version number in menu
	- create tarball in its own function

2010-01-14 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.0-OOO320_m9-1 :
	- new snapshot/3.2.0 RC2
	- gtk2 is a needed runtime dep, #17728

2009-12-17 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.0-OOO320_m8-1 :
	- new snapshot
	- build with new system boost

2009-12-07 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.0-OOO320_m7-1 :
	- new snapshot

2009-11-27 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.0-OOO320_m6-1 :
	- new snapshot

2009-11-19 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.0-OOO320_m5-1 :
	- new snapshot

2009-11-09 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.0-OOO320_m4-1 :
	- new snapshot
	- fix build with system neon
	
2009-10-31 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.0-OOO320_m3-1 :
	- new snapshot
	- add KDE4 support to the profile file + install msg
	- install all built extensions
	# sun-report-builder.oxt and
	# wiki-publisher.oxt installation is still broken
	- link unopkg


2009-10-17 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.0-OOO320_m2-1 :
	- new snapshot = 3.2.0 BETA


2009-10-11 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.0-OOO320_m1-1 :