@@ -1,3 +1,14 @@
+2010-04-26 Andreas Radke <andyrtr at archlinux.org>
+
+        * 3.2.1-OOO320_m16-1 :
+	- new snapshot
+	- add gcc4.5 fixes
+	- use system graphite for i686
+	- disable system saxon
+	- stick to internal cppunit
+	- force configure to use internal redland
+	- --enable-layout again - add buildfixes for this
+
 2010-04-16 Andreas Radke <andyrtr at archlinux.org>
 
         * 3.2.1-OOO320_m15-1 :
